--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -34,7 +34,7 @@
             </section>
         </main>
         <p>
-            <label>Sexo label</label>
+            <label>Sexo </label>
 
             
             </p>
