--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -6,17 +6,18 @@
     </head>
     <body>
         <header>
-            <h1>Olá Mundo! Essa é a minha primeira página da Web.</h1>
+            <h1>Fale com a devaria através desta página.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a> </li>
                     <li><a href="Professores.html"> Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                
                 </ul>
             </nav>
         </header>
         <main>
-            <h2> Para mandar uma mensagem para devaria preencha os campos aba
+            <h2> Para entrar em contato preencha os campos abaixo e clique em enviar!</h2>
             <section>
                 <form action="index.html">
                     <p>
