--- a/Professores.html
+++ b/Professores.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <header>
-            <h1>Professores Devaria</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Professores.html">Prefessores</a></li>
+            <h1>Professores Devaria</h1>  <!-- H1 quer diser primeiro paragrafo dentro o meu site-->
+            <nav> <!-- A abertuda e fechamento da Nav mostra que estamos abrindo a parte de navegação do Site(navbar) -->
+                <ul> <!--AS uls abnrindo e fechando são usadas para abrir as listas -->
+                    <li><a href="index.html">Home</a></li><!-- as lis são os icones que estão dentro das uls para fechar a estrutura da bav -->
+                    <li><a href="Professores.html">Prefessores</a></li> 
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
                 
                 </ul>
