--- a/Professores.html
+++ b/Professores.html
@@ -10,9 +10,9 @@
             <nav> <!-- A abertuda e fechamento da Nav mostra que estamos abrindo a parte de navegação do Site(navbar) -->
                 <ul> <!--AS uls abnrindo e fechando são usadas para abrir as listas -->
                     <li><a href="index.html">Home</a></li><!-- as lis são os icones que estão dentro das uls para fechar a estrutura da bav -->
-                    <li><a href="Professores.html">Prefessores</a></li> 
+                    <li><a href="Professores.html">Prefessores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
-                
+                 <!-- o  a e o  href="URL_do_destino"> Texto do link</a> esta estrutura serve para usar links externos ou internos-->
                 </ul>
             </nav>
         </header>
@@ -21,7 +21,7 @@
                 <div>
                     <img src="Fotos/fotoprofessores.png" width="500" alt="Profeddores Devaria" />
                 </div>
-                <article>
+                <article> 
                     <h2>Dani, Rafa, Fi & Do</h2>
                     <p>
                         Os professores são especialistas em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência</em>.
