--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -21,13 +21,13 @@
             <section>
                 <form action="index.html">
                     <p>
-                        <label>Nome: </label><input type=“text” name='Nome'/>
+                        <label>Nome: </label><input type=“text” name="Nome" maxlength="70"/>  <!--Label é a legenda do campo-->
+                    </p>                                                                      <!-- o maxleght serve para delimitar os cacarteres-->
+                    <p>
+                        <label>E-mail: </label><input type=“text” name= "Email" />
                     </p>
                     <p>
-                        <label>E-mail: </label><input type=“text” name= 'Email' />
-                    </p>
-                    <p>
-                        <label>Comentário: </label>
+                        <label>Comentário: </label> 
                         <textarea name="Comentario" rows="4" cols="50"></textarea>
                     </p>
                     ..... 
