--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -24,7 +24,7 @@
                         <label>Nome: </label><input type=“text” name="Nome" maxlength="70"/>  <!--Label é a legenda do campo-->
                     </p>                                                                      <!-- o maxleght serve para delimitar os cacarteres-->
                     <p>
-                        <label>E-mail: </label><input type=“text” name= "Email" />
+                        <label>E-mail: </label><input type=“text” name= "Email" maxlength="150"/>
                     </p>
                     <p>
                         <label>Comentário: </label> 
