--- a/Professores.html
+++ b/Professores.html
@@ -12,7 +12,8 @@
                     <li><a href="index.html">Home</a></li><!-- as lis são os icones que estão dentro das uls para fechar a estrutura da bav -->
                     <li><a href="Professores.html">Prefessores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
-                 <!-- o  a e o  href="URL_do_destino"> Texto do link</a> esta estrutura serve para usar links externos ou internos-->
+                    <li><a href="devstar.html">Devstars</a></li>
+                    <!-- o  a e o  href="URL_do_destino"> Texto do link</a> esta estrutura serve para usar links externos ou internos-->
                 </ul>
             </nav>
         </header>
