inicio da criaçãod a tabela

--- a/devstar.html
+++ b/devstar.html
@@ -17,7 +17,26 @@
             </nav>
         </header>
             <main>
-                    xxxxx
+                <h2>Como funcionam os pontos devstar</h2>
+                    <section>
+                        <h3>Pontos recebidos através do desafios</h3>
+                            <table>
+                                <TR>
+                                    <TH>-</TH>
+                                    <th>No dia </th>
+                                    <th>Na semana </th>
+                                    <th>depois d euma semana</th>
+                                </TR>
+                                
+                                <tr>
+                                    <td>pontuação</td>
+                                    <td>1250xp</td>
+                                    <td>1000xp</td>
+                                    <td>750xp</td>
+                                </tr>
+   
+                            </table>
+                    </section>
 
             </main>
         <footer>
