--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                     <img src="Fotos/fotohome.png"  width="500" alt="Devaria - Olá Mundo!" />
                 </div>
             </section>
+            <section>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/27MGFFJxpe0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </section>
+            <section>
+                <video width="390px" height="860px" controls>
+                    <source src="douglashreis-20220520-0001.mp4" type="video/mp4">
+                    Seu navegador não suporta a reprodução de vídeos.
+                </video>
+            </section>
+        
+        
         </main>
         <footer>
             <section>
