--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <title>Olá Mundo!</title>
+        <meta name="description" content="A Devaria é uma formação para pessoas que não possuemconhecimento em programação e querem se tornar um bom programador">
+        <meta name="keywords" content="devaria, programação, aulas ao vivo, formação de graça">
+        <meta name="author" content="Daniel Castello" />
+	    <meta http-equiv="refresh" content="50">
+    
     </head>
     <body>
         <header>
@@ -20,6 +25,7 @@
             <section>
                 <figure>
                     <img src="Fotos/fotohome.png"  width="500" alt="Devaria - Olá Mundo!" />
+                    <figcaption> foto de capa da devaria</figcaption>
                 </figure>
             </section>
             <section>
